# joycon2-connector

.github/workflows/: build.yml
joycon2_connector/: CMakeLists.txt
joycon2_connector/languages/: en_us.json  zh_cn.json
joycon2_connector/src/: App.cpp  DeviceManager.h  DsuServer.cpp  DsuServer.h  JoyConDecoder.cpp  JoyConDecoder.h  Logger.h  PlayerManager.h  UI_Pages.h
